security/egress-to-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Egress  
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: argocd
      podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
