security/ingress-allow-from-outside.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-from-outside
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - port: 9100
    - port: 9000
    - port: 8000
    - port: 8443
    
  # - from:
  #   - ipBlock:
  #       cidr: 0.0.0.0/0
